--- a/src/components/TextBox/style.css
+++ b/src/components/TextBox/style.css
@@ -5,3 +5,11 @@ textarea:focus-visible {
 div:has(textarea) {
     border-bottom: "1px solid #4493F8"
 }
+
+button:hover > svg { 
+    color: white;
+}
+
+button:active > svg { 
+    color: rgb(255, 255, 255, .6);
+}
